List.of replaced by Arrays.asList